--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -20,7 +20,7 @@
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
-  height: 400px;
+  height: 450px;
   width: 350px;
 }
 
